# desktop-icons

./: .gitignore  LICENSE  README.md  createthumbnail.js  dbusUtils.js  desktopContainer.js  desktopGrid.js  desktopIconsUtil.js  desktopManager.js  export-zip.sh  extension.js  fileContainer.js  fileItem.js  make_release.sh  meson.build  meson_post_install.py  metadata.json  prefs.js  queue.js  settings.js  stylesheet.css
.gitlab/issue_templates/: I have a Bug.md
po/: LINGUAS  POTFILES.in  cs.po  da.po  de.po  es.po  fi.po  fr.po  fur.po  hu.po  id.po  it.po  nl.po  pl.po  pt_BR.po  ru.po  sv.po  zh_TW.po
schemas/: gschemas.compiled  meson.build  org.gnome.shell.extensions.desktop-icons.gschema.xml
